<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditorActivity">

    <LinearLayout
        android:id="@+id/container_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:text="@string/category_product"
            android:textAppearance="?android:textAppearanceSmall" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <AutoCompleteTextView
                android:id="@+id/edit_product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_product_name"
                android:inputType="text"
                android:textAppearance="?android:textAppearanceMedium" />


            <AutoCompleteTextView
                android:id="@+id/edit_product_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_product_price"
                android:inputType="numberDecimal"
                android:textAppearance="?android:textAppearanceMedium" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:text="@string/category_quantity"
            android:textAppearance="?android:textAppearanceSmall" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/edit_product_quantity_inc"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="+" />

            <TextView
                android:id="@+id/edit_product_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/hint_product_quantity"
                android:textAppearance="?android:textAppearanceMedium" />

            <Button
                android:id="@+id/edit_product_quantity_dec"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="-" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_supplier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:text="@string/category_supplier"
            android:textAppearance="?android:textAppearanceSmall" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <AutoCompleteTextView
                android:id="@+id/edit_supplier_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_supplier_name"
                android:inputType="text"
                android:textAppearance="?android:textAppearanceMedium" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <AutoCompleteTextView
                    android:id="@+id/edit_supplier_phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:hint="@string/hint_supplier_phone"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:textAppearance="?android:textAppearanceMedium" />

                <Button
                    android:id="@+id/call_button"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/ic_call_black_24dp"
                    android:scaleType="fitCenter" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>